--- a/src/about.html
+++ b/src/about.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Welcome - Fedis</title>
-    <!-- build:css css/index.css -->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css">
     <link rel="stylesheet" href="css/main.css">
-    <!-- endbuild -->
 </head>
 <body>
     <div class="container" id="main">
         <div class="row">
             <div class="col-md-12">
                 <div class="jumbotron text-center fedis-main">
-                    <h1>Fedis2222123</h1>                    
-                    <p>Front-End development integration solution</p>
+                    <h1>about</h1>                    
+                    <p>about</p>
                     <small>
-                        <a class="btn btn-success" href="./about.html"><i class="fa fa-qq"></i>加入Q 群<br>221702761</a>
+                        <a class="btn btn-success" href="http://shang.qq.com/wpa/qunwpa?idkey=1aab8e1fc1e992b7390185551e84701163bb9dbdc32a769b185d9f8fd6e70262" target="_blank"><i class="fa fa-qq"></i>加入Q 群<br>221702761</a>
                     </small>
                 </div>
                 <hr>
@@ -29,7 +27,7 @@
         </div>
 	</div>
 	<img src="./img/gratisography-small-waterfall-summer.jpg" alt="">
-    
-    <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="//lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
 </body>
 </html>
