--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Welcome - Fedis</title>
-    <!-- build:css css/index.css -->
-    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css">
-    <link rel="stylesheet" href="css/main.css">
-    <!-- endbuild -->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="icon" href="../../favicon.ico">
+	<title>永高娱乐</title>
+	<!-- <link href="lib/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet"> -->
+	<!-- <link href="css/non-responsive.css" rel="stylesheet"> -->
+	<!-- build:css css/index.css -->
+	<link  href="css/normalize.css" rel="stylesheet">
+	<link  href="css/common.css" rel="stylesheet">
+	<link  href="css/index.css" rel="stylesheet">
+	<!-- endbuild -->
+	<!--[if lte IE 9]>
+	<p class="browserupgrade">您的浏览器版本不支持, 请到 <a href="http://browsehappy.com/">这里</a> 更新, 以获取最佳的体验</p>
+	<![endif]-->
 </head>
+
 <body>
-    <div class="container" id="main">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="jumbotron text-center fedis-main">
-                    <h1>Fedis2222123</h1>                    
-                    <p>Front-End development integration solution</p>
-                    <small>
-                        <a class="btn btn-success" href="./about.html"><i class="fa fa-qq"></i>加入Q 群<br>221702761</a>
-                    </small>
-                </div>
-                <hr>
-                <div class="footer text-center">
-                    <small>Fedis 1.0.0 · Created by Kelsen</small>
-                </div>
-            </div>
-        </div>
+	@@include('include/header.html')
+	<div>
+
 	</div>
-	<img src="./img/gratisography-small-waterfall-summer.jpg" alt="">
-    
-    <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+	<footer>
+		<div class="container center-block">
+			<div class="top">
+				<div class="left">
+					<div class="item qq-icon">客服QQ：152478584</div>
+					<div class="item tel-icon">热线电话：152478584</div>
+					<div class="item email-icon">投诉邮箱：152478584</div>
+				</div>
+				<div class="right">
+					<ul class="list">
+						<li>推荐游戏：百家乐</li>
+						<li>龙虎门</li>
+						<li>腾讯桌球</li>
+						<li>转盘</li>
+						<li>斗地主</li>
+						<li>斗牛</li>
+						<li>斗地主</li>
+						<li>斗地主</li>
+						<li>斗地主</li>
+					</ul>
+					<ul class="list">
+						<li>友情链接：百家乐</li>
+						<li>百家乐</li>
+						<li>百家乐</li>
+						<li>百家乐</li>
+					</ul>
+					<div>合作伙伴：</div>
+					<div class="img"></div>
+				</div>
+			</div>
+			<div class="bottom">
+				<div class="left"></div>
+				<div class="center">
+					<ul class="list">
+						<li>关于我们</li>
+						<li>联络我们</li>
+						<li>隐私政策</li>
+						<li>常见问题</li>
+						<li>代理注册</li>
+						<li>APP下载</li>
+						<li>技术安全保障措施</li>
+					</ul>
+					<div class="tip">广州格斗家有限公司 版权所有粤ICP备16012630号-2粤网文(2017)2191-007号</div>
+					<div class="tip">永高娱乐城 Copyright© 2018 永高 Casino Co.Group All Rights Reserved</div>
+				</div>
+				<div class="right">
+					<ul class="list">
+						<li class="item bz">
+							<div class="text">技术保障</div>
+							<div class="sub-text">专业团队为你护航</div>
+						</li>
+						<li class="item fw">
+							<div class="text">产品服务</div>
+							<div class="sub-text">最稳定的游戏平台</div>
+						</li>
+						<li class="item qk">
+							<div class="text">高校存取款</div>
+							<div class="sub-text">存取款2分钟内到账</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- build:js js/index.js -->
+	<script src="lib/jquery.js"></script>
+	<!-- endbuild -->
+	<!-- <script src="lib/bootstrap-3.3.7-dist/js/bootstrap.js"></script> -->
 </body>
+
 </html>
