--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="">
 	<link rel="icon" href="../../favicon.ico">
 	<title>永高娱乐</title>
+    <meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- <link href="lib/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet"> -->
 	<!-- <link href="css/non-responsive.css" rel="stylesheet"> -->
 	<!-- build:css css/index.css -->
