--- a/src/index.html
+++ b/src/index.html
@@ -101,8 +101,35 @@
 					</div>
 				</div>
 				<div class="right">
-					<div class="content">
-						
+                    <div class="tit">获奖名单</div>
+					<div class="content-wrap">
+						<ul class="content">
+                            <li class="item">
+                                <span class="name">474hye***</span>
+                                <span class="game">欢乐天使</span>
+                                <span class="amount">84100元</span>
+                            </li>
+                            <li class="item">
+                                <span class="name">474hye***</span>
+                                <span class="game">欢乐天使</span>
+                                <span class="amount">84100元</span>
+                            </li>
+                            <li class="item">
+                                <span class="name">474hye***</span>
+                                <span class="game">欢乐天使</span>
+                                <span class="amount">84100元</span>
+                            </li>
+                            <li class="item">
+                                <span class="name">474hye***</span>
+                                <span class="game">欢乐天使</span>
+                                <span class="amount">84100元</span>
+                            </li>
+                            <li class="item">
+                                <span class="name">474hye***</span>
+                                <span class="game">欢乐天使</span>
+                                <span class="amount">84100元</span>
+                            </li>
+                        </ul>
 					</div>
 				</div>
 			</section>
@@ -157,10 +184,12 @@
 			</section>
 		</div>
 		@@include('include/footer.html')
+        @@include('include/siteTool.html')
 
 		<!-- build:js js/index.js -->
 		<script src="lib/jquery.js"></script>
 		<script src="lib/swiper-4.4.6/dist/js/swiper.js"></script>
+        <script src="js/common.js"></script>
 		<!-- endbuild -->
 		<script type="text/javascript">
 			$(document).ready(function() {
