--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 					<div class="title">永高用户登录</div>
 					<div><input class="input zh" type="text" placeholder="账号" /></div>
 					<div><input class="input pw" type="password" placeholder="密码"/></div>
-					<button class="btn">马上登陆</button>
+					<button class="primary btn">马上登陆</button>
 					<div class="btn-group">
 						<label class="remb" for="remb">
 							<input type="checkbox" id="remb" value="记住密码"/>记住密码
