--- a/src/walletDetail.html
+++ b/src/walletDetail.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="../../favicon.ico">
 		<title>永高娱乐</title>
 		<meta name="viewport" content="width=1366, initial-scale=1">
-		<!-- build:css css/centerWallet.css -->
+		<!-- build:css css/walletDetail.css -->
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/common.css" rel="stylesheet">
 		<link href="css/wallet.css" rel="stylesheet">
@@ -26,22 +26,19 @@
 			@@include('include/walletSidebar.html')
 
             <div class="content">
-                <div class="title"><span>中心钱包</span></div>
-                <div class="currency-list">
+                <div class="title"><span>余额明细</span></div>
+                <div class="balance-detail">
                     <div class="item">
-                        <span class="currency">人民币CNY</span>
-                        <span class="amount">510000.12</span>
-                        <a class="detail" href="walletDetail.html">余额详情 ></a>
-                    </div>
-                    <div class="item">
-                        <span class="currency">人民币CNY</span>
-                        <span class="amount">510000.12</span>
-                        <a class="detail" href="walletDetail.html">余额详情 ></a>
-                    </div>
-                    <div class="item">
-                        <span class="currency">人民币CNY</span>
-                        <span class="amount">510000.12</span>
-                        <a class="detail" href="walletDetail.html">余额详情 ></a>
+						<div><span class="type">兑换</span><span class="date">2019-01-26</span></div>
+						<div><span class="amount">-￥8000</span><span class="over">余额：￥8888888</span></div>
+					</div>
+					<div class="item">
+						<div><span class="type">转账</span><span class="date">2019-01-26</span></div>
+						<div><span class="amount">-￥8000</span><span class="over">余额：￥8888888</span></div>
+					</div>
+					<div class="item">
+						<div><span class="type">支付</span><span class="date">2019-01-26</span></div>
+						<div><span class="amount">-￥8000</span><span class="over">余额：￥8888888</span></div>
                     </div>
                 </div>
             </div>
@@ -49,7 +46,7 @@
 		@@include('include/footer.html')
         @@include('include/siteTool.html')
 
-		<!-- build:js js/centerWallet.js -->
+		<!-- build:js js/walletDetail.js -->
 		<script src="lib/jquery.js"></script>
         <script src="js/common.js"></script>
 		<!-- endbuild -->
