--- a/src/walletDetail.html
+++ b/src/walletDetail.html
@@ -13,6 +13,7 @@
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/common.css" rel="stylesheet">
 		<link href="css/wallet.css" rel="stylesheet">
+		<link href="css/walletDetail.css" rel="stylesheet">
 		<!-- endbuild -->
 		<!--[if lte IE 9]>
 		<p class="browserupgrade">您的浏览器版本不支持, 请到 <a href="http://browsehappy.com/">这里</a> 更新, 以获取最佳的体验</p>
