--- a/src/customerService.html
+++ b/src/customerService.html
@@ -24,32 +24,14 @@
 	@@include('include/header.html')
 
 	<div class="container center-block customer-service">
-		<ul class="sidebar">
-			<li class="item active">
-				<a href=""><i class="icon"></i>密码申诉</a>
-			</li>
-			<li class="item">
-				<a href=""><i class="icon"></i>账号申诉</a>
-			</li>
-			<li class="item">
-				<a href=""><i class="icon"></i>充值帮助</a>
-			</li>
-			<li class="item">
-				<a href=""><i class="icon"></i>提现帮助</a>
-			</li>
-			<li class="item">
-				<a href=""><i class="icon"></i>用户协议</a>
-			</li>
-			<button class="service-btn"><a href="">在线客服</a></button>	
-			<button class="service-btn"><a href="">QQ客服</a></button>
-		</ul>
-
+		@@include('include/custServerSidebar.html')
+		
 		<div class="content password-appeal">
 			<div class="title"><span>密码申诉</span></div>
 			<div class="form-wrap">
 				<div class="item">
 					<label for="tel">申诉原因:</label>
-					<select style="color: #808080" id="reason">
+					<select id="reason">
 						<option class="placeholder" value='' disabled selected style='display:none;'>请选择申诉原因</option>
 						<option value="volvo">Volvo</option>
 						<option value="saab">Saab</option>
