--- a/src/myGame.html
+++ b/src/myGame.html
@@ -9,11 +9,11 @@
 		<link rel="icon" href="../../favicon.ico">
 		<title>永高娱乐</title>
 		<meta name="viewport" content="width=1366, initial-scale=1">
-		<!-- build:css css/boundPhone.css -->
+		<!-- build:css css/myGame.css -->
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/common.css" rel="stylesheet">
 		<link href="css/userCenter.css" rel="stylesheet">
-		<link href="css/boundPhone.css" rel="stylesheet">
+		<link href="css/myGame.css" rel="stylesheet">
 		<!-- endbuild -->
 		<!--[if lte IE 9]>
 		<p class="browserupgrade">您的浏览器版本不支持, 请到 <a href="http://browsehappy.com/">这里</a> 更新, 以获取最佳的体验</p>
@@ -31,23 +31,28 @@
 
 				<div class="content ">
 					<div class="header">
-						<div class="title">绑定手机</div>
+						<div class="title">我的游戏</div>
 					</div>
-					<div class="binding-phone">
-						<div class="form-wrap">
-							<div class="item">
-								<label for="tel">手机号:</label>
-								<input id="tel" type="text" placeholder="请输入您的手机号">
-							</div>
-							<div class="item">
-								<label for="verCode">验证码:</label>
-								<input id="verCode" type="number" placeholder="请输入验证码">
-								<button class="code-btn">获取验证码</button>
-							</div>
-							<button id="submit" class="primary">确认</button>
-						</div>
-						<div class="tip">手机号码是您身份的重要认证。</div>
-						<div class="sub-tip">忘记密码时，您可以通过绑定的手机号码找回密码。</div>
+					<div class="my-game">
+						<div class="hd"><span class="hd-name">游戏名字</span><span class="hd-status">状态</span><span></span></div>
+						<ul>
+							<li class="item">
+								<div class="game-name">
+									<img class="game-icon" src="img/zhenren.png" alt="" width="50" height="50">
+									真人视讯
+								</div>
+								<div class="game-status">热门<i class="hot"></i></div>
+								<div><button class="btn"><a href="">进入游戏</a></button></div>
+							</li>
+							<li class="item">
+								<div class="game-name">
+									<img class="game-icon" src="img/zhenren.png" alt="" width="50" height="50">
+									真人视讯
+								</div>
+								<div class="game-status">新游<i class="new"></i></div>
+								<div><button class="btn"><a href="">进入游戏</a></button></div>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</section>
@@ -56,7 +61,7 @@
 		@@include('include/footer.html')
         @@include('include/siteTool.html')
 
-		<!-- build:js js/boundPhone.js -->
+		<!-- build:js js/myGame.js -->
 		<script src="lib/jquery.js"></script>
         <script src="js/common.js"></script>
 		<!-- endbuild -->
