--- a/src/customerService.html
+++ b/src/customerService.html
@@ -25,12 +25,12 @@
 
 	<div class="container center-block customer-service">
 		@@include('include/custServerSidebar.html')
-		
+
 		<div class="content password-appeal">
 			<div class="title"><span>密码申诉</span></div>
 			<div class="form-wrap">
 				<div class="item">
-					<label for="tel">申诉原因:</label>
+					<label>申诉原因:</label>
 					<select id="reason">
 						<option class="placeholder" value='' disabled selected style='display:none;'>请选择申诉原因</option>
 						<option value="volvo">Volvo</option>
