--- a/src/helpRecharge.html
+++ b/src/helpRecharge.html
@@ -2,58 +2,67 @@
 <html lang="zh-CN">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-    <title>永高娱乐</title>
-    <meta name="viewport" content="width=1366, initial-scale=1">
-    <!-- build:css css/helpRecharge.css -->
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/common.css" rel="stylesheet">
-    <link href="css/customerService.css" rel="stylesheet">
-    <link href="css/helpRecharge.css" rel="stylesheet">
-    <!-- endbuild -->
-    <!--[if lte IE 9]>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="icon" href="../../favicon.ico">
+	<title>永高娱乐</title>
+	<meta name="viewport" content="width=1366, initial-scale=1">
+	<!-- build:css css/helpRecharge.css -->
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/common.css" rel="stylesheet">
+	<link href="css/customerService.css" rel="stylesheet">
+	<link href="css/help.css" rel="stylesheet">
+	<!-- endbuild -->
+	<!--[if lte IE 9]>
 		<p class="browserupgrade">您的浏览器版本不支持, 请到 <a href="http://browsehappy.com/">这里</a> 更新, 以获取最佳的体验</p>
 		<![endif]-->
 </head>
 
 <body>
-    @@include('include/header.html')
+	@@include('include/header.html')
 
-    <div class="container center-block customer-service">
-        @@include('include/custServerSidebar.html')
+	<div class="container center-block customer-service">
+		@@include('include/custServerSidebar.html')
 
-        <div class="content">
-            <div class="title"><span>充值帮助</span></div>
-            <div class="help-Recharge">
-                <p>您现在可以透过以下方式存款到 永高娱乐城：</p>
-                <div class="m-title">一、 银行卡划款</div>
-                <p>我们有支持银联转帐，入款银行资讯请点击线上存款，进入公司入款页面即可查看 永高娱乐城提供的入款银行资讯。
-                    目前提供中国工商银行、中国建设银行、中国农业银行三间银行可选择，同行互转存款到帐时间约为三到十分钟，跨行划款需依据银行划款
-                    作业时间为基准，我们将于确认到帐后立刻为您游戏帐户充值。 </p>
-                <div class="m-title">二、 线上支付</div>
-                <p>会员登入后点选"线上存款"，进入线上支付。<br>
-                    选择入款额度，并请确实填写 "联络电话" ，如有任何问题， 永高娱乐城客服第一时间与您联系。<br>
-                    选择"支付银行"。<br><br>
-                    支持借记卡：中国民生银行总行,中国工商银行,中国建设银行,兴业银行,中国光大银行,深圳发展银行,中国邮政,华夏银行,上海浦东发展银行,中
-                    国银行,上海银行,交通银行,广东发展银行,北京银行,中信银行,深圳平安银行,中国农业银行,招商银行。<br><br>
-                    确认送出后﹐将请您确认您的支付订单无误，并建议您记录您的支付订单号后，确认送出，并耐心等待载入网络银行页面﹐传输中已将您账
-                    户数据加密﹐请耐心等待。<br><br>
-                    进入网络银行页面﹐请确实填写您银行账号信息﹐支付成功﹐额度将在10分钟内系统处理完成，立即加入您的银行娱乐场会员账户。
-                </p>
-            </div>
-        </div>
-    </div>
-    @@include('include/footer.html')
-    @@include('include/siteTool.html')
+		<div class="content">
+			<div class="title"><span>充值帮助</span></div>
+			<div class="help-Recharge">
+				<p>您现在可以透过以下方式存款到 永高娱乐城：<br><br></p>
+				<div class="m-title">一、 银行卡划款</div>
+				<p>我们有支持银联转帐，入款银行资讯请点击线上存款，进入公司入款页面即可查看 永高娱乐城提供的入款银行资讯。
+					目前提供中国工商银行、中国建设银行、中国农业银行三间银行可选择，同行互转存款到帐时间约为三到十分钟，跨行划款需依据银行划款
+					作业时间为基准，我们将于确认到帐后立刻为您游戏帐户充值。<br><br> </p>
+				<div class="m-title">二、 线上支付</div>
+				<p>会员登入后点选"线上存款"，进入线上支付。<br>
+					选择入款额度，并请确实填写 "联络电话" ，如有任何问题， 永高娱乐城客服第一时间与您联系。<br>
+					选择"支付银行"。<br><br>
+					支持借记卡：中国民生银行总行,中国工商银行,中国建设银行,兴业银行,中国光大银行,深圳发展银行,中国邮政,华夏银行,上海浦东发展银行,中
+					国银行,上海银行,交通银行,广东发展银行,北京银行,中信银行,深圳平安银行,中国农业银行,招商银行。<br><br>
+					确认送出后﹐将请您确认您的支付订单无误，并建议您记录您的支付订单号后，确认送出，并耐心等待载入网络银行页面﹐传输中已将您账
+					户数据加密﹐请耐心等待。<br><br>
+					进入网络银行页面﹐请确实填写您银行账号信息﹐支付成功﹐额度将在10分钟内系统处理完成，立即加入您的银行娱乐场会员账户。<br><br>
+				</p>
+				<div class="m-title">三、 同时支持：支付宝及微信支付充值</div>
+				<P>
+					如您在存款过程中遇到任何问题﹐请您点击"在线客服"寻求协助。
+					<br><br>
+					存款需知:<br>
+					永高娱乐城单笔最低存款为￥100人民币，单笔最高存款无上限。<br>
+					未开通网银的会员，请亲洽您的银行柜台办理。<br>
+					如有任何问题，请您联系24小时线上客服。
+				</P>
+			</div>
+		</div>
+	</div>
+	@@include('include/footer.html')
+	@@include('include/siteTool.html')
 
-    <!-- build:js js/helpRecharge.js -->
-    <script src="lib/jquery.js"></script>
-    <script src="js/common.js"></script>
-    <!-- endbuild -->
+	<!-- build:js js/helpRecharge.js -->
+	<script src="lib/jquery.js"></script>
+	<script src="js/common.js"></script>
+	<!-- endbuild -->
 </body>
 
 </html>
