--- a/src/centerWallet.html
+++ b/src/centerWallet.html
@@ -13,6 +13,7 @@
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/common.css" rel="stylesheet">
 		<link href="css/wallet.css" rel="stylesheet">
+		<link href="css/centerWallet.css" rel="stylesheet">
 		<!-- endbuild -->
 		<!--[if lte IE 9]>
 		<p class="browserupgrade">您的浏览器版本不支持, 请到 <a href="http://browsehappy.com/">这里</a> 更新, 以获取最佳的体验</p>
@@ -22,7 +23,7 @@
 	<body>
 		@@include('include/header.html')
 		
-		<div class="container center-block center-wallet">
+		<div class="container center-block user-wallet">
 			@@include('include/walletSidebar.html')
 
             <div class="content">
