--- a/src/addBankCard.html
+++ b/src/addBankCard.html
@@ -67,6 +67,9 @@
 	<script src="lib/jquery.js"></script>
 	<script src="js/common.js"></script>
 	<!-- endbuild -->
+	<script type="text/javascript">
+		var curTitle = '添加银行卡'
+	</script>
 </body>
 
 </html>
