--- a/src/index.html
+++ b/src/index.html
@@ -1,207 +1,240 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<link rel="icon" href="../../favicon.ico">
-		<title>永高娱乐</title>
-		<meta name="viewport" content="width=1366, initial-scale=1">
-		<!-- build:css css/index.css -->
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/common.css" rel="stylesheet">
-		<link href="lib/swiper-4.4.6/dist/css/swiper.css" rel="stylesheet">
-		<link href="css/index.css" rel="stylesheet">
-		<!-- endbuild -->
-		<!--[if lte IE 9]>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+    <title>永高娱乐</title>
+    <meta name="viewport" content="width=1366, initial-scale=1">
+    <!-- build:css css/index.css -->
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
+    <link href="lib/swiper-4.4.6/dist/css/swiper.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <!-- endbuild -->
+    <!--[if lte IE 9]>
 		<p class="browserupgrade">您的浏览器版本不支持, 请到 <a href="http://browsehappy.com/">这里</a> 更新, 以获取最佳的体验</p>
 		<![endif]-->
-	</head>
+</head>
 
-	<body>
-		@@include('include/header.html')
-		<div class="banner swiper-container">
-			<div class="swiper-wrapper">
-				<div class="swiper-slide" style="background-image: url(img/index/banner1.png);">
-					<a href=""></a>
-				</div>
-				<div class="swiper-slide" style="background-image: url(img/index/banner2.png);">
-					<a href=""></a>
-				</div>
-				<div class="swiper-slide" style="background-image: url(img/index/banner3.png)">
-					<a href=""></a>
-				</div>
-			</div>
-			<!-- 如果需要分页器 -->
-			<div class="swiper-pagination"></div>
-		</div>
-		
-		<div class="container center-block">
-			<section class="login-area">
-				<div class="item login">
-					<div class="title">永高用户登录</div>
-					<div><input class="input zh" type="text" placeholder="账号" /></div>
-					<div><input class="input pw" type="password" placeholder="密码"/></div>
-					<button class="primary btn">马上登陆</button>
-					<div class="btn-group">
-						<label class="remb" for="remb">
-							<input type="checkbox" id="remb" value="记住密码"/>记住密码
-						</label>
-						<a href="#">忘记密码</a>
-					</div>
-					<div class="login-method-wrap">
-						<ul class="group">
-							<li class="qq"><span>QQ</span></li>
-							<li class="wx"><span>微信</span></li>
-							<li class="wb"><span>微博</span></li>
-						</ul>
-						<a class="regist" href="#">免费注册</a>
-					</div>
-				</div>
-				<div class="item pic1">
-					<div class="pt-title"><a href="">立鑫平台</a></div>
-					<div class="sub-title">最专业平台：百家乐 拥挤</div>
-				</div>
-				<div class="item pic2">
-					<div class="pt-title"><a href="">欧博平台</a></div>
-					<div class="sub-title">最专业平台：龙虎门 拥挤</div>
-				</div>
-				<div class="item pic3">
-					<div class="pt-title"><a href="">AG平台</a></div>
-					<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
-				</div>
-			</section>
-			
-			<section class="trans-info-area">
-				<div class="left">
-					<div class="info">
-                   		<p>最新消息:新会员福利，首存即送28元;天天返水 高达3%[ 2018/12/17 21:47:50 ]</p>
+<body>
+    @@include('include/header.html')
+    <div class="banner swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide" style="background-image: url(img/index/banner1.png);">
+                <a href=""></a>
+            </div>
+            <div class="swiper-slide" style="background-image: url(img/index/banner2.png);">
+                <a href=""></a>
+            </div>
+            <div class="swiper-slide" style="background-image: url(img/index/banner3.png)">
+                <a href=""></a>
+            </div>
+        </div>
+        <!-- 如果需要分页器 -->
+        <div class="swiper-pagination"></div>
+    </div>
+
+    <div class="container center-block">
+        <section class="login-area">
+            <div class="item login">
+                <div class="title">永高用户登录</div>
+                <div><input class="input zh" type="text" placeholder="账号" /></div>
+                <div><input class="input pw" type="password" placeholder="密码" /></div>
+                <button class="primary btn">马上登陆</button>
+                <div class="btn-group">
+                    <label class="remb" for="remb">
+                        <input type="checkbox" id="remb" value="记住密码" />记住密码
+                    </label>
+                    <a href="#">忘记密码</a>
+                </div>
+                <div class="login-method-wrap">
+                    <ul class="group">
+                        <li class="qq"><span>QQ</span></li>
+                        <li class="wx"><span>微信</span></li>
+                        <li class="wb"><span>微博</span></li>
+                    </ul>
+                    <a class="regist" href="#">免费注册</a>
+                </div>
+            </div>
+            <div class="item pic1">
+                <div class="pt-title"><a href="">立鑫平台</a></div>
+                <div class="sub-title">最专业平台：百家乐 拥挤</div>
+            </div>
+            <div class="item pic2">
+                <div class="pt-title"><a href="">欧博平台</a></div>
+                <div class="sub-title">最专业平台：龙虎门 拥挤</div>
+            </div>
+            <div class="item pic3">
+                <div class="pt-title"><a href="">AG平台</a></div>
+                <div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+            </div>
+        </section>
+
+        <section class="trans-info-area">
+            <div class="left">
+                <div class="info">
+                    <p>最新消息:新会员福利，首存即送28元;天天返水 高达3%[ 2018/12/17 21:47:50 ]</p>
+                </div>
+                <div class="content">
+                    <div class="item">
+                        <div class="text-wrap">
+                            <p class="tit">利鑫超级奖池</p>
+                            <p class="text">3,788,478.11</p>
+                        </div>
                     </div>
-					<div class="content">
-						<div class="item">
-							<div class="text-wrap">
-								<p class="tit">利鑫超级奖池</p>
-								<p class="text">3,788,478.11</p>
-							</div>
-						</div>
-						<div class="item">
-							<div class="text-wrap">
-								<p class="tit">利鑫超级奖池</p>
-								<p class="text">3,788,478.11</p>
-							</div>
-						</div>
-						<div class="item">
-							<div class="text-wrap">
-								<p class="tit">利鑫超级奖池</p>
-								<p class="text">3,788,478.11</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="right">
-                    <div class="tit">获奖名单</div>
-					<div class="content-wrap">
-						<ul class="content">
-                            <li class="item">
-                                <span class="name">474hye***</span>
-                                <span class="game">欢乐天使</span>
-                                <span class="amount">84100元</span>
-                            </li>
-                            <li class="item">
-                                <span class="name">474hye***</span>
-                                <span class="game">欢乐天使</span>
-                                <span class="amount">84100元</span>
-                            </li>
-                            <li class="item">
-                                <span class="name">474hye***</span>
-                                <span class="game">欢乐天使</span>
-                                <span class="amount">84100元</span>
-                            </li>
-                            <li class="item">
-                                <span class="name">474hye***</span>
-                                <span class="game">欢乐天使</span>
-                                <span class="amount">84100元</span>
-                            </li>
-                            <li class="item">
-                                <span class="name">474hye***</span>
-                                <span class="game">欢乐天使</span>
-                                <span class="amount">84100元</span>
-                            </li>
-                        </ul>
-					</div>
-				</div>
-			</section>
-			
-			<section class="game-area">
-				<div class="header">
-					<div class="title"><span>推荐游戏</span></div>
-					<div class="btn-wrap">换一批</div>
-				</div>
-				<div class="content">
-					<div class="item">
-						<img src="img/index/zhuoqiu.png" width="284" height="168"/>
-						<div class="item-bottom">
-							<div class="left">
-								<div class="pt-title"><a href="">腾讯桌球</a></div>
-								<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
-							</div>
-							<button>进入游戏</button>
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/index/saiche.png" width="284" height="168"/>
-						<div class="item-bottom">
-							<div class="left">
-								<div class="pt-title"><a href="">竞技赛车</a></div>
-								<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
-							</div>
-							<button>进入游戏</button>
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/index/21dian.png" width="284" height="168"/>
-						<div class="item-bottom">
-							<div class="left">
-								<div class="pt-title"><a href="">21点</a></div>
-								<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
-							</div>
-							<button>进入游戏</button>
-						</div>
-					</div>
-					<div class="item">
-						<img src="img/index/baijiale.png" width="284" height="168"/>
-						<div class="item-bottom">
-							<div class="left">
-								<div class="pt-title"><a href="">百家乐</a></div>
-								<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
-							</div>
-							<button>进入游戏</button>
-						</div>
-					</div>
-				</div>
-			</section>
-		</div>
-		@@include('include/footer.html')
-        @@include('include/siteTool.html')
+                    <div class="item">
+                        <div class="text-wrap">
+                            <p class="tit">利鑫超级奖池</p>
+                            <p class="text">3,788,478.11</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="text-wrap">
+                            <p class="tit">利鑫超级奖池</p>
+                            <p class="text">3,788,478.11</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="tit">获奖名单</div>
+                <div class="content-wrap">
+                    <ul class="content">
+                        <li class="item">
+                            <span class="name">474hye***</span>
+                            <span class="game">欢乐天使</span>
+                            <span class="amount">84100元</span>
+                        </li>
+                        <li class="item">
+                            <span class="name">474hye***</span>
+                            <span class="game">欢乐天使</span>
+                            <span class="amount">84100元</span>
+                        </li>
+                        <li class="item">
+                            <span class="name">474hye***</span>
+                            <span class="game">欢乐天使</span>
+                            <span class="amount">84100元</span>
+                        </li>
+                        <li class="item">
+                            <span class="name">474hye***</span>
+                            <span class="game">欢乐天使</span>
+                            <span class="amount">84100元</span>
+                        </li>
+                        <li class="item">
+                            <span class="name">474hye***</span>
+                            <span class="game">欢乐天使</span>
+                            <span class="amount">84100元</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
-		<!-- build:js js/index.js -->
-		<script src="lib/jquery.js"></script>
-		<script src="lib/swiper-4.4.6/dist/js/swiper.js"></script>
-        <script src="js/common.js"></script>
-		<!-- endbuild -->
-		<script type="text/javascript">
-			$(document).ready(function() {
-				var mySwiper = new Swiper('.swiper-container', {
-					loop: true, // 循环模式选项
-					// 如果需要分页器
-					pagination: {
-						el: '.swiper-pagination',
-					}
-				})
-			});
-		</script>
-	</body>
+        <section class="game-area">
+            <div class="header">
+                <div class="title"><span>推荐游戏</span></div>
+                <div class="btn-wrap">换一批</div>
+            </div>
+            <div class="content">
+                <div class="item">
+                    <img src="img/index/zhuoqiu.png" width="284" height="168" />
+                    <div class="item-bottom">
+                        <div class="left">
+                            <div class="pt-title"><a href="">腾讯桌球</a></div>
+                            <div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+                        </div>
+                        <button>进入游戏</button>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/index/saiche.png" width="284" height="168" />
+                    <div class="item-bottom">
+                        <div class="left">
+                            <div class="pt-title"><a href="">竞技赛车</a></div>
+                            <div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+                        </div>
+                        <button>进入游戏</button>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/index/21dian.png" width="284" height="168" />
+                    <div class="item-bottom">
+                        <div class="left">
+                            <div class="pt-title"><a href="">21点</a></div>
+                            <div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+                        </div>
+                        <button>进入游戏</button>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/index/baijiale.png" width="284" height="168" />
+                    <div class="item-bottom">
+                        <div class="left">
+                            <div class="pt-title"><a href="">百家乐</a></div>
+                            <div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+                        </div>
+                        <button>进入游戏</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    @@include('include/footer.html')
+    @@include('include/siteTool.html')
+
+    <div class="yg-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="modal-title">永高用户登录</div>
+                    <button class="close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="login">
+                        <div><input class="input zh" type="text" placeholder="账号" /></div>
+                        <div><input class="input pw" type="password" placeholder="密码" /></div>
+                        <button class="primary btn">马上登陆</button>
+                        <div class="btn-group">
+                            <label class="remb" for="remb">
+                                <input type="checkbox" id="remb" value="记住密码" />记住密码
+                            </label>
+                            <a href="#">忘记密码</a>
+                        </div>
+                        <div class="login-method-wrap">
+                            <ul class="group">
+                                <li class="qq"><span>QQ</span></li>
+                                <li class="wx"><span>微信</span></li>
+                                <li class="wb"><span>微博</span></li>
+                            </ul>
+                            <a class="regist" href="#">免费注册</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="modal-footer"></div> -->
+            </div>
+        </div>
+    </div>
+    
+    <!-- build:js js/index.js -->
+    <script src="lib/jquery.js"></script>
+    <script src="lib/swiper-4.4.6/dist/js/swiper.js"></script>
+    <script src="js/common.js"></script>
+    <!-- endbuild -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var mySwiper = new Swiper('.swiper-container', {
+                loop: true, // 循环模式选项
+                // 如果需要分页器
+                pagination: {
+                    el: '.swiper-pagination',
+                }
+            })
+        });
+    </script>
+</body>
 
 </html>
