--- a/src/withdraw.html
+++ b/src/withdraw.html
@@ -62,6 +62,9 @@
 						<span class="box">1000元</span>
 						<span class="box">5000元</span>
 						<span class="box other"> <input type="number" placeholder="其他金额">元</span>
+						<span class="box all">
+							<span></span>
+						</span>
 					</div>
 				</div>
 				<div class="to-amount-tip">
