--- a/src/userCenter.html
+++ b/src/userCenter.html
@@ -52,7 +52,7 @@
 					<div class="binding-info">
 						<div class="title">绑定联系方式</div>
 						<div class="item">
-							<i class="icon"></i>
+							<i class="icon b-tel"></i>
 							<div class="column">
 								<div class="tip">
 									<span class="hd">手机号码</span>
@@ -63,7 +63,7 @@
 							<button><a href="boundPhone.html">绑定手机</a></button>
 						</div>
 						<div class="item">
-							<i class="icon"></i>
+							<i class="icon b-email"></i>
 							<div class="column">
 								<div class="tip">
 									<span class="hd">密保邮箱</span>
