--- a/src/index.html
+++ b/src/index.html
@@ -100,9 +100,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="right">
+			<div class="right txtMarquee-top">
 				<div class="tit">获奖名单</div>
-				<div class="content-wrap">
+				<div class="content-wrap bd">
 					<ul class="content">
 						<li class="item">
 							<span class="name">474hye***</span>
@@ -229,8 +229,8 @@
 					<button class="close"></button>
 				</div>
 				<div class="modal-body">
-					<div class="login">
-						<div>
+					<div class="regist">
+						<div class="input-box r-nation">
 							<select class="input">
 								<option class="placeholder" value='' disabled selected style='display:none;'>国家/地区</option>
 								<option value="volvo">Volvo</option>
@@ -239,14 +239,20 @@
 								<option value="audi">Audi</option>
 							</select>
 						</div>
-						<div><input class="input zh" type="text" placeholder="邮箱/手机" /></div>
-						<div><input class="input pw" type="password" placeholder="密码" /></div>
-						<button class="primary btn">马上登陆</button>
-						<div class="btn-group">
-							<label class="remb" for="remb">
-								<input type="checkbox" id="remb" value="记住密码" />记住密码
-							</label>
-							<a href="#">忘记密码</a>
+						<div class="input-box zh"><input class="input" type="text" placeholder="邮箱/手机" /></div>
+						<div class="input-box pw"><input class="input" type="password" placeholder="输入6-20位字母、数字密码" /></div>
+						<div class="input-box pw"><input class="input" type="password" placeholder="确认密码" /></div>
+						<div class="input-box verCode">
+							<input class="input" id="verCode" type="number" placeholder="验证码">
+							<button class="code-btn">获取验证码</button>
+						</div>
+						<div class="input-box yqm"><input class="input" type="text" placeholder="邀请码/无可留空" /></div>
+						<div class="protocol"><input checked type="checkbox">
+							我已阅读并同意 <a class="warning" href="">代理服务协议</a>
+						</div>
+						<button class="primary btn">接受协议并注册</button>
+						<div class="r-bottom-tip">
+							已有账号，<a class="warning" href="">立即登录</a>
 						</div>
 					</div>
 				</div>
@@ -259,10 +265,12 @@
 	<!-- build:js js/index.js -->
 	<script src="lib/jquery.js"></script>
 	<script src="lib/swiper-4.4.6/dist/js/swiper.js"></script>
+	<script src="lib/superSlide2.1.1.js"></script>
 	<script src="js/common.js"></script>
 	<!-- endbuild -->
 	<script type="text/javascript">
 		$(document).ready(function () {
+			// 轮播图
 			var mySwiper = new Swiper('.swiper-container', {
 				loop: true, // 循环模式选项
 				// 如果需要分页器
@@ -270,6 +278,15 @@
 					el: '.swiper-pagination',
 				}
 			})
+
+			jQuery(".txtMarquee-top").slide({
+				mainCell: ".bd ul",
+				autoPlay: true,
+				effect: "topMarquee",
+				vis: 5,
+				interTime: 50,
+				trigger: "click"
+			});
 
 			// 登陆模态框
 			$("header .login-btn").click(function () {
@@ -288,6 +305,14 @@
 				$(".regist-modal").show();
 				$("body").css("overflow", "hidden")
 			})
+
+			$(".regist-modal .input").focus(function () {
+				$(this).parent(".input-box").addClass("pressed");
+			})
+			$(".regist-modal .input").blur(function () {
+				$(this).parent(".input-box").removeClass("pressed");
+			})
+
 		});
 	</script>
 </body>
