--- a/src/addBankCard.html
+++ b/src/addBankCard.html
@@ -57,6 +57,18 @@
 				<button class="primary submit">立即添加</button>
 			</div>
 			<!-- 添加银行卡END -->
+
+			<!-- 步骤2 设置交易密码  如果未设置-->
+			<!-- <div class="step2">
+				<div class="item">
+					<label>卡号:<input class="input-box" type="number" placeholder="请输入卡号"></label>
+				</div>
+				<div class="item">
+					<label>姓名:<input class="input-box" type="text" placeholder="持卡人姓名"></label>
+				</div>
+				<button class="primary submit">立即添加</button>
+			</div> -->
+			<!-- 设置交易密码 -->
 		</div>
 		<div class="bottom-tip">添加个人银行卡，以方便支付</div>
 	</div>
