--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 				<div class="pic-wrap">
 					<img src="img/index/lixin.png" width="284" height="174" />
 					<div class="mask">
-						<button class="primary"><a href="">进入平台</a></button>
+						<button class="primary"><a href="gamePlatform.html">进入平台</a></button>
 					</div>
 				</div>
 				<div class="item-bottom">
@@ -76,7 +76,7 @@
 				<div class="pic-wrap">
 					<img src="img/index/oubo.png" width="284" height="174" />
 					<div class="mask">
-						<button class="primary"><a href="">进入平台</a></button>
+						<button class="primary"><a href="gamePlatform.html">进入平台</a></button>
 					</div>
 				</div>
 				<div class="item-bottom">
@@ -88,7 +88,7 @@
 				<div class="pic-wrap">
 					<img src="img/index/AG.png" width="284" height="174" />
 					<div class="mask">
-						<button class="primary"><a href=""></a>进入平台</a></button>
+						<button class="primary"><a href="gamePlatform.html">进入平台</a></button>
 					</div>
 				</div>
 				<div class="item-bottom">
