--- a/src/securityPwd.html
+++ b/src/securityPwd.html
@@ -1,63 +1,157 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<link rel="icon" href="../../favicon.ico">
-		<title>永高娱乐</title>
-		<meta name="viewport" content="width=1366, initial-scale=1">
-		<!-- build:css css/securityPwd.css -->
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/common.css" rel="stylesheet">
-		<link href="css/userCenter.css" rel="stylesheet">
-		<link href="css/securityPwd.css" rel="stylesheet">
-		<!-- endbuild -->
-		<!--[if lte IE 9]>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="icon" href="../../favicon.ico">
+	<title>永高娱乐</title>
+	<meta name="viewport" content="width=1366, initial-scale=1">
+	<!-- build:css css/securityPwd.css -->
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/common.css" rel="stylesheet">
+	<link href="css/userCenter.css" rel="stylesheet">
+	<link href="css/securityPwd.css" rel="stylesheet">
+	<!-- endbuild -->
+	<!--[if lte IE 9]>
 		<p class="browserupgrade">您的浏览器版本不支持, 请到 <a href="http://browsehappy.com/">这里</a> 更新, 以获取最佳的体验</p>
 		<![endif]-->
-	</head>
+</head>
 
-	<body>
-		@@include('include/header.html')
-		
-		<div class="container center-block user-center">
-			@@include('include/userInfo.html')
-			
-			<section class="main">
-				@@include('include/userSidebar.html')
+<body>
+	@@include('include/header.html')
 
-				<div class="content ">
-					<div class="header">
-						<div class="title">二级密码</div>
-					</div>
-					<div class="security-pwd">
-						<!-- 未设置 -->
-						<div class="not-set">
-							<div class="tip">
-								二级密码是为了保护玩家隐私及财产安全而推出的功能，玩家在进行部分操作时需要输入二级密码，才能够进行操作。<br>
-								二级密码可以防止玩家帐号被盗时引发的用户隐私泄漏等财产遭受额外损失。
-							</div>
-							<div class="cont-wrap">
-								<span class="text"><i class="spot"></i> 未设置</span>
-								<button id="submit" class="primary">马上设置</button>
-							</div>
+	<div class="container center-block user-center">
+		@@include('include/userInfo.html')
+
+		<section class="main">
+			@@include('include/userSidebar.html')
+
+			<div class="content ">
+				<div class="header">
+					<div class="title">二级密码</div>
+				</div>
+				<div class="security-pwd">
+					<!-- 未设置 -->
+					<div class="not-set">
+						<div class="tip">
+							二级密码是为了保护玩家隐私及财产安全而推出的功能，玩家在进行部分操作时需要输入二级密码，才能够进行操作。<br>
+							二级密码可以防止玩家帐号被盗时引发的用户隐私泄漏等财产遭受额外损失。
 						</div>
-						<!-- 未设置END -->
+						<div class="cont-wrap">
+							<span class="text"><i class="spot"></i> 未设置</span>
+							<button id="setBtn" class="primary">马上设置</button>
+						</div>
+					</div>
+					<!-- 未设置END -->
+
+					<div class="set-wrap" style="display:none;">
+						<div class="tip">
+							二级密码是为了保护玩家隐私及财产安全而推出的功能，玩家在进行部分操作时需要输入二级密码，才能够进行操作。<br>
+							二级密码可以防止玩家帐号被盗时引发的用户隐私泄漏等财产遭受额外损失。
+						</div>
+						<ul class="step-pic">
+							<li class="item cur">
+								<div class="text">手机安全认证</div>
+								<div class="circle">1</div>
+							</li>
+							<li class="item">
+								<div class="text">请输入二级密码</div>
+								<div class="circle">2</div>
+							</li>
+							<li class="item">
+								<div class="text">设置成功</div>
+								<div class="circle">3</div>
+							</li>
+							<div class="bar"><span class="inline"></span></div>
+						</ul>
+						<!-- 设置步骤一 -->
+						<div class="form-wrap first">
+							<div class="input-wrap">
+								<label for="tel">您的手机号码:</label>
+								<input id="tel" type="tel" placeholder="请输入您的手机号码">
+							</div>
+							<div class="input-wrap">
+								<label for="verCode">验证码:</label>
+								<input id="verCode" type="number" placeholder="请输入验证码">
+								<button class="code-btn">获取验证码</button>
+							</div>
+							<button id="step1Btn" class="primary">下一步</button>
+						</div>
+						<!-- 设置步骤一 END -->
+
+						<!-- 设置步骤二 -->
+						<div class="form-wrap second" style="display:none;">
+							<div class="item">
+								<label for="secPsw">二级密码:</label>
+								<div class="input-wrap">
+									<input id="secPsw" type="password" placeholder="输入您的二级密码">
+									<i class="icon-eyes"></i>
+								</div>
+							</div>
+							<div class="item">
+								<label for="confirmSecPsw">确认二级密码:</label>
+								<div class="input-wrap">
+									<input id="confirmSecPsw" type="password" placeholder="再次输入二级密码">
+									<i class="icon-eyes"></i>
+								</div>
+							</div>
+							<button id="step2Btn" class="primary">下一步</button>
+						</div>
+						<!-- 设置步骤二 END -->
+
+						<!-- 设置成功 -->
+						<div class="set-success" style="display:none;">
+							您的二级密码设置成功!
+						</div>
+						<!-- 设置成功 END -->
+
 					</div>
 				</div>
-			</section>
-				
-		</div>
-		@@include('include/footer.html')
-        @@include('include/siteTool.html')
+			</div>
+		</section>
+	</div>
+	@@include('include/footer.html')
+	@@include('include/siteTool.html')
 
-		<!-- build:js js/securityPwd.js -->
-		<script src="lib/jquery.js"></script>
-        <script src="js/common.js"></script>
-		<!-- endbuild -->
-	</body>
+	<!-- build:js js/securityPwd.js -->
+	<script src="lib/jquery.js"></script>
+	<script src="js/common.js"></script>
+	<!-- endbuild -->
+	<script type="text/javascript">
+		$(function () {
+			// 密码显示隐藏
+			$(".icon-eyes").click(function () {
+				var inputType = $(this).siblings("input").attr("type");
+				var curInputType = inputType === "password" ? "text" : "password";
+				$(this).toggleClass("on").siblings("input").attr("type", curInputType);
+			})
+
+			// 去设置
+			$("#setBtn").click(function() {
+				$(".not-set").hide();
+				$(".set-wrap").show();
+			})		
+
+			// 设置第一步
+			$("#step1Btn").click(function() {
+				$(".first").hide();
+				$(".second").show();
+				$(".step-pic .item").eq(1).addClass("cur");
+				$(".bar .inline").width("50%");
+			})
+			
+			//设置第二部
+			$("#step2Btn").click(function() {
+				$(".second").hide();
+				$(".set-success").show();
+				$(".step-pic .item").eq(2).addClass("cur");
+				$(".bar .inline").width("100%");
+			})
+		});
+	</script>
+</body>
 
 </html>
