--- a/src/activity.html
+++ b/src/activity.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="icon" href="../../favicon.ico">
+	<link rel="icon" href="">
 	<title>永高娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/activity.css -->
